--- a/lab01/exercise01/style.css
+++ b/lab01/exercise01/style.css
@@ -9,3 +9,20 @@ body {
 /*
 Add some style blocks below this line to style the card.
 */
+
+section {
+    width: 350px;
+    margin: 10px;
+    border: solid 1px #CCC; /*border-radius*/
+    padding-bottom: 20px;
+}
+
+img {
+    width: 100%;
+    
+}
+
+h2, p, button {
+    margin-left: 20px;
+    margin-right: 20px;
+}
