--- a/lab01/exercise02/style.css
+++ b/lab01/exercise02/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300');
+
+h1, h2{
+   font-family: 'Open Sans Condensed', sans-serif;
+   color: #000;
+}
+
 body * {
     box-sizing: border-box;
 }
