--- a/lab01/exercise02/style.css
+++ b/lab01/exercise02/style.css
@@ -38,6 +38,12 @@ img {
     width: 100%;
 }
 
+iframe {
+    width: 100%;
+    /*height: 100%;
+    min-height: 100px;*/
+}
+
 /* Tablet Media Query */
 @media only screen and (max-width: 1000px) { /*if screen is at certain width*/
     main {
